# api_for_the_library

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 1e196238c661_create_borrowedbooks.py  23acad06cce2_create_borrowedbooks2.py  57be8b0402ab_update_borrowedbook.py  62f497d884d5_create_books.py  88ff3e77a11a_create_readers.py  a3b54edc66c8_initial_migration.py  efbc7ba8fddf_update_borrowedbook.py  f3933f42f5f8_update_borrowedbook.py
src/: __init__.py  database.py  exceptions.py  main.py
src/books/: dao.py  models.py  router.py  schemas.py
src/books_issued/: dao.py  models.py  router.py  schemas.py
src/exceptions/: book_exceptions.py  borrowed_books_exceptions.py  user_exceptions.py
src/librarians/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
src/readers/: dao.py  models.py  router.py  schemas.py
